# mazze-rust

./: Cargo.toml
bins/mazze-gen-dot/: main.rs
bins/mazze-miner/: Cargo.toml
bins/mazze-miner/src/: main.rs  miner.rs  stratum_clients.rs
bins/mazze/src/: cli.yaml  main.rs  test.rs
bins/mazze/src/command/: account.rs  helpers.rs  mod.rs  rpc.rs
bins/mazze_key/: Cargo.toml
bins/mazze_key/src/: main.rs
bins/mazze_store/src/: crack.rs  main.rs
bins/pos-genesis-tool/: main.rs
crates/accounts/: Cargo.toml
crates/accounts/src/: account_data.rs  error.rs  lib.rs  stores.rs
crates/blockgen/src/: lib.rs
crates/blockgen/src/miner/: mod.rs  stratum.rs  work_notify.rs
crates/client/benches/: benchmark.rs
crates/client/src/: accounts.rs  config_macro.rs  configuration.rs  lib.rs  rpc.rs
crates/client/src/archive/: mod.rs
crates/client/src/common/: mod.rs
crates/client/src/full/: mod.rs
crates/client/src/light/: mod.rs
crates/client/src/rpc/: authcodes.rs  error_codes.rs  extractor.rs  impls.rs  interceptor.rs  rpc_apis.rs  types.rs
crates/dbs/db-errors/src/: statedb.rs  storage.rs
crates/dbs/db/src/: lib.rs
crates/dbs/kvdb-rocksdb/src/: lib.rs
crates/dbs/statedb/src/: global_params.rs  lib.rs  statedb_ext.rs  tests.rs
crates/dbs/storage/src/: lib.rs  snapshot_manager.rs  state.rs  state_manager.rs
crates/mazze_addr/src/: checksum.rs  consts.rs  errors.rs  lib.rs  tests.rs
crates/mazze_bytes/src/: lib.rs
crates/mazze_key/: Cargo.toml  README.md
crates/mazze_key/src/: extended.rs  keypair.rs  lib.rs  math.rs  secret.rs  signature.rs
crates/mazze_math/benches/: basic.rs  bench.rs
crates/mazze_math/src/nth_root/: compute.rs  inv.rs
crates/mazze_store/: README.md
crates/mazze_store/src/: error.rs  import.rs  lib.rs  mazzekey.rs  mazzestore.rs  presale.rs  secret_store.rs
crates/mazze_store/src/account/: crypto.rs  safe_account.rs
crates/mazze_store/src/accounts_dir/: disk.rs  mod.rs
crates/mazze_store/tests/: api.rs
crates/mazze_store/tests/util/: transient_dir.rs
crates/mazze_types/src/: lib.rs
crates/mazze_utils/src/: cancellable_task_channel.rs  lib.rs
crates/mazzecore/core/examples/: snapshot_merge_test.rs
crates/mazzecore/core/src/: cache_config.rs  cache_manager.rs  channel.rs  db.rs  error.rs  genesis_block.rs  lib.rs  message.rs  node_type.rs  rpc_errors.rs  state_prefetcher.rs  unique_id.rs  verification.rs
crates/mazzecore/execute-helper/src/: estimation.rs
crates/mazzecore/executor/src/: context.rs  spec.rs  substate.rs
crates/mazzecore/geth-tracer/src/: fourbyte.rs  geth_tracer.rs  tracing_inspector.rs  types.rs  utils.rs
crates/mazzecore/internal_common/src/: block_data_db_encoding.rs  chain_id.rs  consensus_api.rs  epoch_execution_commitment.rs  lib.rs  (+2 more)
crates/network/src/: connection.rs  discovery.rs  error.rs  handshake.rs  ip_utils.rs  lib.rs  node_database.rs  node_table.rs  service.rs  session.rs  session_manager.rs  throttling.rs
crates/primitives/benches/: benchmark.rs
crates/primitives/src/: account.rs  block.rs  block_header.rs  block_number.rs  epoch.rs  filter.rs  is_default.rs  lib.rs  log_entry.rs  receipt.rs  state_root.rs  static_bool.rs  storage.rs  storage_key.rs  transaction_index.rs  zero.rs
crates/secret_store/src/: lib.rs
crates/serde_utils/src/: num.rs
crates/stratum/src/: lib.rs  traits.rs
crates/transactiongen/src/: lib.rs
governance/: Cargo.toml
governance/src/: governance.rs  lib.rs  proposals.rs  voting.rs
governance/src/tests/: governance_tests.rs  proposals_tests.rs  voting_tests.rs
internal_contract/: README.md
interoperability/: Cargo.toml
interoperability/src/: bridge.rs  cross_chain_swap.rs  cross_chain_transfer.rs  lib.rs
interoperability/src/tests/: bridge_tests.rs  cross_chain_swap_tests.rs  cross_chain_transfer_tests.rs
logs/: CHANGELOG-0.1.x.md  CHANGELOG-0.2.x.md
performance/: Cargo.toml
performance/src/: caching.rs  lib.rs  optimization.rs  parallel_processing.rs
performance/src/tests/: optimization_tests.rs
privacy/: Cargo.toml
privacy/src/: confidential_transactions.rs  lib.rs  privacy.rs  zero_knowledge_proofs.rs
privacy/src/tests/: confidential_transactions_tests.rs  privacy_tests.rs  zero_knowledge_proofs_tests.rs
run/: hydra.toml  log.yaml  start.bat  start.sh
(+1030 files in other folders)
