[package]
name = "interoperability"
version = "0.1.0"
edition = "2018"
description = "A Rust library for blockchain interoperability, including cross-chain transfers and swaps."
homepage = "https://www.mazze.io"
authors = ["Mazze Team"]
repository = "https://github.com/MazzeLabs/mazze-rust/interoperability"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["blockchain", "interoperability", "cross-chain", "bridge", "transfer", "swap"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.50"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
assert_matches = "1.5"
rand = "0.8"

[features]
default = ["std"]
std = ["tokio", "serde", "serde_json", "thiserror", "log", "env_logger"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[[test]]
name = "bridge_tests"
path = "src/tests/bridge_tests.rs"

[[test]]
name = "cross_chain_transfer_tests"
path = "src/tests/cross_chain_transfer_tests.rs"

[[test]]
name = "cross_chain_swap_tests"
path = "src/tests/cross_chain_swap_tests.rs"

[badges]
travis-ci = { repository = "MazzeLabs/mazze-rust/interoperability" }
