[package]
name = "privacy"
version = "0.1.0"
edition = "2021"
description = "A Rust library for privacy-preserving technologies, including zero-knowledge proofs and confidential transactions."
homepage = "https://www.mazze.io"
authors = ["Mazze Team"]
repository = "https://github.com/MazzeLabs/mazze-rust/privacy"
license = "MIT"
keywords = ["privacy", "zero-knowledge", "confidential transactions", "cryptography"]

[dependencies]
# Core dependencies for cryptographic operations
curve25519-dalek = "3.1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha3 = "0.10"
blake2 = "0.9"

# Dependencies for zero-knowledge proofs
bellman = "0.9"
ff = "0.10"
group = "0.9"
pairing = "0.21"
zexe = "0.6"

# Utilities and testing
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.0"
criterion = "0.4"

[features]
default = ["std"]
std = ["serde/std", "serde_json/std"]

[lib]
name = "privacy"
path = "src/lib.rs"
